# tfm-manifest3

./: .gitignore  README.md  west.yml
hello_world/: build.sh  rebuild.sh
hello_world/ns_app/: CMakeLists.txt  main.c
tests_psa/: build.sh  flash.sh
tests_reg/: build.sh  flash.sh
